# NOA_ESP32_PD

./: LICENSE  README.md
ESP32_Arduino/ESP32_Arduino_Partitions/Config/: ESP32_DOWNLOAD_TOOLS_Setting.txt
ESP32_Arduino_Partitions/Config/: boards.txt  snacker_8MB.csv  snacker_fat8MB.csv
ESP32_IDF4_4/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.debug  sdkconfig.defaults  sdkconfig.old  sdkconfig.source
ESP32_IDF4_4/main/: CMakeLists.txt  main.cpp
ESP32_IDF4_4/main/src/APP/: NOA_App.cpp  NOA_App.h
ESP32_IDF4_4/main/src/DRV/PDM/: FUSB302.cpp  NCP81239.cpp  NCP81239.h  tcpm.h  tcpm_driver.cpp  tcpm_driver.h  usb_pd.h  usb_pd_driver.cpp  usb_pd_driver.h  usb_pd_policy.cpp  usb_pd_protocol.cpp
ESP32_IDF4_4/main/src/LIB/PUB/: NOA_debug.cpp  NOA_list.cpp  NOA_list.h  NOA_public.cpp  NOA_public.h  platform.h
ESP32_IDF4_4/main/src/PD/: NOA_Pd.cpp  NOA_Pd.h
ESP32_IDF_Partitions/Config/: ESP32S2_DOWNLOAD_TOOLS_Setting.txt  Snacker ESP32 Pinmap.txt  StationESP32S2_Pinmap.txt
NOA_ESP32_PD/: Adafruit_OM9663.cpp  FUSB302.cpp  FUSB302.h  MFRC630.cpp  MFRC630.h  NCP81239.cpp  NCP81239.h  NEOPixel.cpp  NOA_App.cpp  NOA_App.h  NOA_ESP32_PD.ino  NOA_NFC.cpp  NOA_Net.cpp  NOA_Net.h  NOA_public.cpp  NOA_public.h  platform.h  tcpm.h  tcpm_driver.cpp  tcpm_driver.h  usb_pd.h  usb_pd_driver.cpp  usb_pd_driver.h  usb_pd_policy.cpp  usb_pd_protocol.cpp
NOA_ESP32_PD/src/APP/: NOA_App.cpp
NOA_ESP32_PD/src/NET/: NOA_Net.cpp  NOA_Net.h
NOA_ESP32_PD/src/UI/: NEOPixel.cpp
NOA_ESP32_PD/src/WEB/: NOA_WebPage.h  NOA_WebServer.cpp  NOA_WebServer.h
(+25 files in other folders)
